--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+/*= reset.css */
 /* Base&Grid */
 
 a {
@@ -101,4 +102,8 @@ a:hover {
 }
 .grid12 {
 	width:940px;
+}
+
+body {
+  color: orange;
 }
