--- a/src/css/base/base.css
+++ b/src/css/base/base.css
@@ -1,132 +1,51 @@
-/* Base&Grid */
-
 * {
-  box-sizing: border-box;
-  font-family: "Roboto", Arial, sans-serif;
-}
-
-.clearfix:before,
-.clearfix:after {
-  content: "";
-  display: table;
-}
-.clearfix:after {
-  clear: both;
-}
-
-.pull-right {
-  float: right;
-}
-.pull-left {
-  float: left;
-}
-.hide {
-  display: none;
-}
-.show {
-  display: block;
-}
-.invisible {
-  visibility: hidden;
-}
-.full_width {
-    width: 100%;
-}
-
-.container {
-  margin-left: auto;
-  margin-right: auto;
-  width: 960px;
-}
-  .container:after {
-    content: "";
-    display: table;
-    clear: both;
-  }
-.grid1,
-.grid2,
-.grid3,
-.grid4,
-.grid5,
-.grid6,
-.grid7,
-.grid8,
-.grid9,
-.grid10,
-.grid11,
-.grid12 {
-  float:left;
-  margin-left:10px;
-  margin-right:10px;
-}
-.first {
-  margin-left:0;
-}
-.last {
-  margin-right:0;
-}
-.nomar {
-  margin: 0;
-}
-.grid1 {
-  width:60px;
-}
-.grid2 {
-  width:140px;
-}
-.grid3 {
-  width:220px;
-}
-.grid4 {
-  width:300px;
-}
-.grid5 {
-  width:380px;
-}
-.grid6 {
-  width:460px;
-}
-.grid7 {
-  width:540px
-}
-.grid8 {;
-  width:620px;
-}
-.grid9 {
-  width:700px;
-}
-.grid10 {
-  width:780px;
-}
-.grid11 {
-  width:860px;
-}
-.grid12 {
-  width:940px;
+  box-sizing: border-box !important;
 }
 
 body {
-  min-width: 960px;
+  font-family: $default-font;
   font-size: 14px;
-  background-color: #ffa;
+  background-color: #f5f5f5;
+  color: #191e27;
 }
-a {
-  color: $primary;
-  transition: all .3s;
+body.unscrollable {
+  overflow: hidden;
 }
-a:hover {
-  color: $secondary;
-}
-.ico {
-  position: absolute;
-  top: 0;
-  left: 0;
-  display: block;
-  width: 16px;
-  height: 16px;
-  background: url($icons) 0 0 no-repeat;
+.wrapper {
+  .container {
+    flex-direction: column;
+  }
 }
 
+.container {
+  display: flex;
+  width: 100%;
+  margin-right: auto;
+  margin-left: auto;
+  justify-content: space-between;
+  @media ($md) {
+    width: 720px;
+  }
+  @media ($lg) {
+    width: 960px;
+  }
+  @media ($xl) {
+    width: 1140px;
+  }
+}
+
+a {
+  color: #000;
+  transition: all .3s;
+  text-decoration: none;
+}
+a:hover {
+  text-decoration: underline;
+}
+.icon_svg {
+  width: 16px;
+  height: 16px;
+}
 h1 {
   font-size: 24px;
 }
@@ -144,4 +63,35 @@ h5 {
 }
 h6 {
   font-size: 14px;
+}
+
+input[type="text"],
+input[type="email"],
+input[type="password"],
+input[type="search"],
+textarea,
+select {
+  /*padding: 8px 10px;*/
+  padding: 10px 12px;
+  border: 1px solid #c5c5c5;
+  border-radius: 3px;
+}
+
+.default_button {
+  font-weight: 300;
+  font-size: 14px;
+  background: #ae1800;
+  color: #fff;
+  border: none;
+  padding: 10px 20px 12px 20px;
+  border-radius: 3px;
+  display: flex;
+  align-items: center;
+  text-decoration: none !important;
+  @extend shorttrans;
+  svg {
+    fill: #fff;
+    width: 15px;
+    margin-right: 8px;
+  }
 }
