--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,11 +1,11 @@
 @import "../../node_modules/normalize-css/normalize.css";
 @import "../../node_modules/slick-carousel/slick/slick.css";
+@import "../../node_modules/@fancyapps/fancybox/dist/jquery.fancybox.min.css";
 
 @import "base/vars.css";
 @import "base/base.css";
 
 @import "parts/header.css";
 @import "parts/footer.css";
-@import "parts/sidebar.css";
 
 @import "pages/home.css";
