--- a/src/css/base/base.css
+++ b/src/css/base/base.css
@@ -5,7 +5,7 @@
 body {
   font-family: $default-font;
   font-size: 14px;
-  background-color: #f5f5f5;
+  background-color: #fff;
   color: #191e27;
 }
 body.unscrollable {
